[project]
name = "celeste-image-enhance"
version = "0.1.0"
description = "Image enhancement across providers for Celeste"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "aiohttp>=3.9.0",
    "Pillow",
    "streamlit-image-comparison>=0.0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "streamlit",
    "notebook>=7.4.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }
